--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Tree Example</title>
+    <title>Employment Pathways</title>
 
     <style>
 
@@ -32,16 +32,17 @@
 	}
 
     </style>
-
+<!-- load the d3.js library -->
+<script src="https://d3js.org/d3.v5.min.js"></script>
+<script src="tree-boxes.js" type="text/javascript"></script>
+	  
   </head>
 
   <body>
 
 
 
-<!-- load the d3.js library -->
-<script src="https://d3js.org/d3.v5.min.js"></script>
-<script src="tree-boxes.js" type="text/javascript"></script>
+
 <!-- <script src="//code.jquery.com/jquery-1.10.2.js"></script> -->
 <script>
 
