--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </style>
 <!-- load the d3.js library -->
 <script src="https://d3js.org/d3.v5.min.js"></script>
-<script src="tree-boxes.js" type="text/javascript"></script>
+<!-- <script src="tree-boxes.js" type="text/javascript"></script> -->
 	  
   </head>
 
