--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
     </style>
 <!-- load the d3.js library -->
-<script src="https://d3js.org/d3.v5.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+<!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
 <!-- <script src="tree-boxes.js" type="text/javascript"></script> -->
 	  
   </head>
@@ -177,8 +178,10 @@ var margin = {top: 20, right: 0, bottom: 20, left: 350},
 var i = 0,
 	duration = 750;
 
-var tree = d3.tree()
-	.nodeSize([width, height]);
+// var tree = d3.tree()
+// 	.nodeSize([width, height]);
+var tree = d3.layout.tree()
+	.size([height, width])
 
 var diagonal = d3.svg.diagonal()
 	.projection(function(d) { return [d.y, d.x]; });
