--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
     </style>
 <!-- load the d3.js library -->
-<script src="https://d3js.org/d3.v5.min.js"></script>
-<!-- <script src="http://d3js.org/d3.v3.min.js"></script> -->
+<!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="tree-boxes.js" type="text/javascript"></script>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script> -->
 <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
