--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ var startingJob = "11-1011.00",
   jobsInPath = [],
   jobTitles = [],
   nodes = [],
-  selectValue,
+  selectValue="41-2031.00",
   links = [],
   network_data = {},
   generateTreeData,
