--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <!-- load the d3.js library -->
     <script src="https://d3js.org/d3.v3.min.js"></script>
-    <script src="js/tree-boxes.js" type="text/javascript"></script>
+<!--     <script src="js/tree-boxes.js" type="text/javascript"></script> -->
 
   </head>
 
