--- a/index.html
+++ b/index.html
@@ -7,29 +7,7 @@
 
     <style>
 
-	.node {
-		cursor: pointer;
-	}
-
-	.node circle {
-	  fill: #fff;
-	  stroke: steelblue;
-	  stroke-width: 3px;
-	}
-
-	.node text {
-    font: 12px sans-serif;
-  }
-
-  .node text tspan:first-child{
-    font-weight: bold;
-  }
-
-	.link {
-	  fill: none;
-	  stroke: #ccc;
-	  stroke-width: 2px;
-	}
+    <link rel="stylesheet" href="styles.css">
 
     </style>
 <!-- load the d3.js library -->
