--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Employment Pathways</title>
 
     <style>
-    	<link rel="stylesheet" href="styles.css">
+    	<link rel="stylesheet" type="text/css" href="styles.css">
     </style>
     
     <script src="https://d3js.org/d3.v3.min.js"></script>
