--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 	  
 <script>
 
+<div>
 var df;
 const job_info = {}
 const immediatePathways = []
@@ -159,7 +160,7 @@ var generateTreeData = function(startingJob) {
 
 
 // ************** Generate the tree diagram	 *****************
-<div>
+
 	
 var margin = {top: 20, right: 0, bottom: 20, left: 350},
 	// width = 960 - margin.right - margin.left,
@@ -338,6 +339,8 @@ function click(d) {
   }
   update(d);
 }
+</div>	
+	
 
 </script>
 
